# MVSengine

./: .gitignore  Cargo.toml  MVS_MANAGER_ASSISTANT.txt  Makefile  README.md  deny.toml  mvs.json  todo.md
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: auto-tag-version.yml  ci.yml  fuzz.yml  release.yml
docs/: CONTRACT_1X.md  DISTRIBUTION.md  INSTALL_AND_CI.md  RELEASE.md  SUPPLY_CHAIN.md  TODO_1.0.md  USAGE.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: checksum_parser.rs
packaging/: minisign.pub
scripts/: install.ps1  install.sh  verify-release.sh
scripts/ci/: run_full_ci.sh
scripts/release/: check_dogfood.sh  github_prerelease.sh  github_release.sh  merge_checksums.sh  package.sh  sync_cargo_version.sh
src/: cli.rs  github_http.rs  install_release.rs  lib.rs  main.rs  update.rs
src/commands/: boundary_debug.rs  check_manifest.rs  constraint.rs  doctor.rs  generator.rs  init.rs  linter.rs  mod.rs  output.rs  reader.rs  report.rs  schema.rs  self_update.rs  validate_all.rs  watch.rs
src/mvs/: crawler.rs  hashing.rs  manifest.rs  mod.rs  reader.rs
src/mvs/crawler/: language.rs
src/mvs/crawler/adapters/: csharp.rs  go.rs  java.rs  kotlin.rs  lua.rs  lua_family.rs  luau.rs  mod.rs  php.rs  python.rs  ruby.rs  swift.rs  ts_js.rs
tests/: integration_cli.rs
tests/fixtures/contracts/: generate_boundary_debug.json  generate_cli.json  generator_manifest_cli.json  lint_boundary_debug.json  lint_excluded_paths_debug.json  report_manifest_diff.json  validate_degraded.json  validate_incompatible.json
tests/fixtures/generator_project/: tool_schema.json
tests/fixtures/generator_project/src/: api.ts  lib.rs
tests/fixtures/install_release/: checksums.txt  checksums.txt.minisig
tests/fixtures/manifests/: extension_out_of_range.json  host_no_shim.json  host_with_shim.json  report_base.json  report_target.json
tests/fixtures/release_python_multi_root/app/: api.py
tests/fixtures/release_ruby_luau/src/: api.rb  (+1 more)
tests/fixtures/release_rust_workspace/: Cargo.toml
(+8 files in other folders)
