[package]
name = "mvs-manager"
version = "0.2.4"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/alextheberge/MVSengine"
readme = "README.md"
description = "MVS Engine manager CLI for multidimensional post-SemVer versioning."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
