[package]
name = "mvs-manager"
version = "1.3.7"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/alextheberge/MVSengine"
readme = "README.md"
description = "MVS Engine manager CLI for multidimensional post-SemVer versioning."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "=0.8.8"
sha2 = "0.10"
syn = { version = "2.0", features = ["full"] }
tree-sitter = "0.24.7"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-lua = "0.2.0"
tree-sitter-luau = "1.2.0"
tree-sitter-language = "=0.1.3"
tree-sitter-php = "=0.23.11"
tree-sitter-python = "0.23.6"
tree-sitter-ruby = "0.23.1"
tree-sitter-swift = "=0.7.0"
tree-sitter-typescript = "0.23.2"
quote = "1.0"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
