[package]
name = "mvs-manager-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mvs-manager = { path = ".." }

[[bin]]
name = "checksum_parser"
path = "fuzz_targets/checksum_parser.rs"
test = false
doc = false
bench = false

[workspace]
